--- a/MobileFlightBag/app/src/main/res/values/strings.xml
+++ b/MobileFlightBag/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">MobileFlightBag</string>
     <string name="action_settings">Settings</string>
+    <string name="settings">Settings</string>
+    <string name="multi_crew">Multi-Crew</string>
+    <string name="solo">Solo</string>
+    <string name="title_activity_solo_flight_selection">SoloFlightSelection</string>
+    <string name="title_activity_checklist">Checklist</string>
 </resources>
