--- a/MobileFlightBag/app/src/main/res/values/strings.xml
+++ b/MobileFlightBag/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="settings">Settings</string>
     <string name="multi_crew">Multi-Crew</string>
     <string name="solo">Solo</string>
-    <string name="title_activity_solo_flight_selection">SoloFlightSelection</string>
+    <string name="title_activity_solo_flight_selection">Solo Flight Checklists</string>
     <string name="title_activity_checklist">Checklist</string>
+    <string name="sample_item">Sample Item</string>
+    <string name="sample_check">Sample Check</string>
 </resources>
